--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "loader.js": "^4.0.1",
     "nullbase-basic-layout": "https://github.com/nullrocket/nullbase-basic-layout.git#0.0.0-alpha",
     "nullbase-checkbox": "https://github.com/nullrocket/nullbase-checkbox.git#0.0.0-alpha",
-    "nullbase-input": "*",
+    "nullbase-input": "https://github.com/nullrocket/nullbase-input.git#0.0.0-alpha",
     "nullbase-scroll-panel": "https://github.com/nullrocket/nullbase-scroll-panel.git#0.0.0.alpha",
     "async": "^2.1.4"
   },
