--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nullbase-menu",
-  "version": "0.0.20-alpha",
+  "version": "0.0.21-alpha",
 
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
@@ -59,9 +59,9 @@
     "ember-spread": "0.0.6",
     "focus-trap": "^2.1.0",
     "lodash": "^4.16.3",
-    "nullbase-button": "https://github.com/nullrocket/nullbase-button.git#0.0.7-alpha",
-    "nullbase-gestures": "https://github.com/nullrocket/nullbase-gestures.git#0.0.0-alpha",
-    "nullbase-theme-service": "https://github.com/nullrocket/nullbase-theme-service.git#0.0.4-alpha"
+    "nullbase-button": "https://github.com/nullrocket/nullbase-button.git",
+    "nullbase-gestures": "https://github.com/nullrocket/nullbase-gestures.git",
+    "nullbase-theme-service": "https://github.com/nullrocket/nullbase-theme-service.git"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
